src/parsing/system_parser/system.output
Grammar

    0 $accept: system "end of file"

    1 $@1: %empty

    2 system: eol_sequence "system" ":" "identifier" $@1 "\n" eol_sequence declaration_list
    3       | error "end of file"

    4 declaration_list: non_empty_declaration_list eol_sequence
    5                 | %empty

    6 non_empty_declaration_list: declaration
    7                           | non_empty_declaration_list eol_sequence declaration

    8 declaration: "clock" ":" uinteger ":" "identifier" "\n"
    9            | "edge" ":" "identifier" ":" "identifier" ":" "identifier" ":" "identifier" attr_list sop "\n"
   10            | "event" ":" "identifier" "\n"
   11            | "int" ":" uinteger ":" integer ":" integer ":" integer ":" "identifier" "\n"
   12            | "location" ":" "identifier" ":" "identifier" attr_list "\n"
   13            | "process" ":" "identifier" "\n"
   14            | "sync" ":" sync_constraint_list "\n"
   15            | error "\n"

   16 attr_list: "{" non_empty_attr_list "}"
   17          | "{" "}"
   18          | %empty

   19 non_empty_attr_list: attr
   20                    | non_empty_attr_list ":" attr

   21 sop: "[" "push" ":" "identifier" "]"
   22    | "[" "pop" ":" "identifier" "<=" "integer value" "]"
   23    | "[" "pop" ":" "identifier" ">=" "integer value" "]"
   24    | "[" "pop" ":" "identifier" "<" "integer value" "]"
   25    | "[" "pop" ":" "identifier" ">" "integer value" "]"
   26    | "[" "]"

   27 attr: "identifier" ":" text_or_empty

   28 text_or_empty: "text value"
   29              | %empty

   30 sync_constraint_list: sync_constraint
   31                     | sync_constraint_list ":" sync_constraint

   32 sync_constraint: "identifier" "@" "identifier" sync_strength

   33 sync_strength: "?"
   34              | %empty

   35 eol_sequence: eol_sequence "\n"
   36             | %empty

   37 integer: "integer value"

   38 uinteger: "integer value"


Terminals, with rules where they appear

"end of file" (0) 0 3
error (256) 3 15
"clock" (258) 8
":" (259) 2 8 9 10 11 12 13 14 20 21 22 23 24 25 27 31
"@" (260) 32
"?" (261) 33
"{" (262) 16 17
"}" (263) 16 17
"[" (264) 21 22 23 24 25 26
"]" (265) 21 22 23 24 25 26
"<" (266) 24
">" (267) 25
"<=" (268) 22
">=" (269) 23
"push" (270) 21
"pop" (271) 22 23 24 25
"edge" (272) 9
"\n" (273) 2 8 9 10 11 12 13 14 15 35
"event" (274) 10
"identifier" (275) 2 8 9 10 11 12 13 21 22 23 24 25 27 32
"int" (276) 11
"integer value" (277) 22 23 24 25 37 38
"location" (278) 12
"process" (279) 13
"sync" (280) 14
"system" (281) 2
"text value" (282) 28


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
system (29)
    on left: 2 3, on right: 0
$@1 (30)
    on left: 1, on right: 2
declaration_list (31)
    on left: 4 5, on right: 2
non_empty_declaration_list (32)
    on left: 6 7, on right: 4 7
declaration (33)
    on left: 8 9 10 11 12 13 14 15, on right: 6 7
attr_list (34)
    on left: 16 17 18, on right: 9 12
non_empty_attr_list (35)
    on left: 19 20, on right: 16 20
sop (36)
    on left: 21 22 23 24 25 26, on right: 9
attr (37)
    on left: 27, on right: 19 20
text_or_empty (38)
    on left: 28 29, on right: 27
sync_constraint_list (39)
    on left: 30 31, on right: 14 31
sync_constraint (40)
    on left: 32, on right: 30 31
sync_strength (41)
    on left: 33 34, on right: 32
eol_sequence (42)
    on left: 35 36, on right: 2 4 7 35
integer (43)
    on left: 37, on right: 11
uinteger (44)
    on left: 38, on right: 8 11


State 0

    0 $accept: . system "end of file"

    error  shift, and go to state 1

    "\n"      reduce using rule 36 (eol_sequence)
    "system"  reduce using rule 36 (eol_sequence)

    system        go to state 2
    eol_sequence  go to state 3


State 1

    3 system: error . "end of file"

    "end of file"  shift, and go to state 4


State 2

    0 $accept: system . "end of file"

    "end of file"  shift, and go to state 5


State 3

    2 system: eol_sequence . "system" ":" "identifier" $@1 "\n" eol_sequence declaration_list
   35 eol_sequence: eol_sequence . "\n"

    "\n"      shift, and go to state 6
    "system"  shift, and go to state 7


State 4

    3 system: error "end of file" .

    $default  reduce using rule 3 (system)


State 5

    0 $accept: system "end of file" .

    $default  accept


State 6

   35 eol_sequence: eol_sequence "\n" .

    $default  reduce using rule 35 (eol_sequence)


State 7

    2 system: eol_sequence "system" . ":" "identifier" $@1 "\n" eol_sequence declaration_list

    ":"  shift, and go to state 8


State 8

    2 system: eol_sequence "system" ":" . "identifier" $@1 "\n" eol_sequence declaration_list

    "identifier"  shift, and go to state 9


State 9

    2 system: eol_sequence "system" ":" "identifier" . $@1 "\n" eol_sequence declaration_list

    $default  reduce using rule 1 ($@1)

    $@1  go to state 10


State 10

    2 system: eol_sequence "system" ":" "identifier" $@1 . "\n" eol_sequence declaration_list

    "\n"  shift, and go to state 11


State 11

    2 system: eol_sequence "system" ":" "identifier" $@1 "\n" . eol_sequence declaration_list

    $default  reduce using rule 36 (eol_sequence)

    eol_sequence  go to state 12


State 12

    2 system: eol_sequence "system" ":" "identifier" $@1 "\n" eol_sequence . declaration_list
   35 eol_sequence: eol_sequence . "\n"

    error       shift, and go to state 13
    "clock"     shift, and go to state 14
    "edge"      shift, and go to state 15
    "\n"        shift, and go to state 6
    "event"     shift, and go to state 16
    "int"       shift, and go to state 17
    "location"  shift, and go to state 18
    "process"   shift, and go to state 19
    "sync"      shift, and go to state 20

    "end of file"  reduce using rule 5 (declaration_list)

    declaration_list            go to state 21
    non_empty_declaration_list  go to state 22
    declaration                 go to state 23


State 13

   15 declaration: error . "\n"

    "\n"  shift, and go to state 24


State 14

    8 declaration: "clock" . ":" uinteger ":" "identifier" "\n"

    ":"  shift, and go to state 25


State 15

    9 declaration: "edge" . ":" "identifier" ":" "identifier" ":" "identifier" ":" "identifier" attr_list sop "\n"

    ":"  shift, and go to state 26


State 16

   10 declaration: "event" . ":" "identifier" "\n"

    ":"  shift, and go to state 27


State 17

   11 declaration: "int" . ":" uinteger ":" integer ":" integer ":" integer ":" "identifier" "\n"

    ":"  shift, and go to state 28


State 18

   12 declaration: "location" . ":" "identifier" ":" "identifier" attr_list "\n"

    ":"  shift, and go to state 29


State 19

   13 declaration: "process" . ":" "identifier" "\n"

    ":"  shift, and go to state 30


State 20

   14 declaration: "sync" . ":" sync_constraint_list "\n"

    ":"  shift, and go to state 31


State 21

    2 system: eol_sequence "system" ":" "identifier" $@1 "\n" eol_sequence declaration_list .

    $default  reduce using rule 2 (system)


State 22

    4 declaration_list: non_empty_declaration_list . eol_sequence
    7 non_empty_declaration_list: non_empty_declaration_list . eol_sequence declaration

    $default  reduce using rule 36 (eol_sequence)

    eol_sequence  go to state 32


State 23

    6 non_empty_declaration_list: declaration .

    $default  reduce using rule 6 (non_empty_declaration_list)


State 24

   15 declaration: error "\n" .

    $default  reduce using rule 15 (declaration)


State 25

    8 declaration: "clock" ":" . uinteger ":" "identifier" "\n"

    "integer value"  shift, and go to state 33

    uinteger  go to state 34


State 26

    9 declaration: "edge" ":" . "identifier" ":" "identifier" ":" "identifier" ":" "identifier" attr_list sop "\n"

    "identifier"  shift, and go to state 35


State 27

   10 declaration: "event" ":" . "identifier" "\n"

    "identifier"  shift, and go to state 36


State 28

   11 declaration: "int" ":" . uinteger ":" integer ":" integer ":" integer ":" "identifier" "\n"

    "integer value"  shift, and go to state 33

    uinteger  go to state 37


State 29

   12 declaration: "location" ":" . "identifier" ":" "identifier" attr_list "\n"

    "identifier"  shift, and go to state 38


State 30

   13 declaration: "process" ":" . "identifier" "\n"

    "identifier"  shift, and go to state 39


State 31

   14 declaration: "sync" ":" . sync_constraint_list "\n"

    "identifier"  shift, and go to state 40

    sync_constraint_list  go to state 41
    sync_constraint       go to state 42


State 32

    4 declaration_list: non_empty_declaration_list eol_sequence .
    7 non_empty_declaration_list: non_empty_declaration_list eol_sequence . declaration
   35 eol_sequence: eol_sequence . "\n"

    error       shift, and go to state 13
    "clock"     shift, and go to state 14
    "edge"      shift, and go to state 15
    "\n"        shift, and go to state 6
    "event"     shift, and go to state 16
    "int"       shift, and go to state 17
    "location"  shift, and go to state 18
    "process"   shift, and go to state 19
    "sync"      shift, and go to state 20

    "end of file"  reduce using rule 4 (declaration_list)

    declaration  go to state 43


State 33

   38 uinteger: "integer value" .

    $default  reduce using rule 38 (uinteger)


State 34

    8 declaration: "clock" ":" uinteger . ":" "identifier" "\n"

    ":"  shift, and go to state 44


State 35

    9 declaration: "edge" ":" "identifier" . ":" "identifier" ":" "identifier" ":" "identifier" attr_list sop "\n"

    ":"  shift, and go to state 45


State 36

   10 declaration: "event" ":" "identifier" . "\n"

    "\n"  shift, and go to state 46


State 37

   11 declaration: "int" ":" uinteger . ":" integer ":" integer ":" integer ":" "identifier" "\n"

    ":"  shift, and go to state 47


State 38

   12 declaration: "location" ":" "identifier" . ":" "identifier" attr_list "\n"

    ":"  shift, and go to state 48


State 39

   13 declaration: "process" ":" "identifier" . "\n"

    "\n"  shift, and go to state 49


State 40

   32 sync_constraint: "identifier" . "@" "identifier" sync_strength

    "@"  shift, and go to state 50


State 41

   14 declaration: "sync" ":" sync_constraint_list . "\n"
   31 sync_constraint_list: sync_constraint_list . ":" sync_constraint

    ":"   shift, and go to state 51
    "\n"  shift, and go to state 52


State 42

   30 sync_constraint_list: sync_constraint .

    $default  reduce using rule 30 (sync_constraint_list)


State 43

    7 non_empty_declaration_list: non_empty_declaration_list eol_sequence declaration .

    $default  reduce using rule 7 (non_empty_declaration_list)


State 44

    8 declaration: "clock" ":" uinteger ":" . "identifier" "\n"

    "identifier"  shift, and go to state 53


State 45

    9 declaration: "edge" ":" "identifier" ":" . "identifier" ":" "identifier" ":" "identifier" attr_list sop "\n"

    "identifier"  shift, and go to state 54


State 46

   10 declaration: "event" ":" "identifier" "\n" .

    $default  reduce using rule 10 (declaration)


State 47

   11 declaration: "int" ":" uinteger ":" . integer ":" integer ":" integer ":" "identifier" "\n"

    "integer value"  shift, and go to state 55

    integer  go to state 56


State 48

   12 declaration: "location" ":" "identifier" ":" . "identifier" attr_list "\n"

    "identifier"  shift, and go to state 57


State 49

   13 declaration: "process" ":" "identifier" "\n" .

    $default  reduce using rule 13 (declaration)


State 50

   32 sync_constraint: "identifier" "@" . "identifier" sync_strength

    "identifier"  shift, and go to state 58


State 51

   31 sync_constraint_list: sync_constraint_list ":" . sync_constraint

    "identifier"  shift, and go to state 40

    sync_constraint  go to state 59


State 52

   14 declaration: "sync" ":" sync_constraint_list "\n" .

    $default  reduce using rule 14 (declaration)


State 53

    8 declaration: "clock" ":" uinteger ":" "identifier" . "\n"

    "\n"  shift, and go to state 60


State 54

    9 declaration: "edge" ":" "identifier" ":" "identifier" . ":" "identifier" ":" "identifier" attr_list sop "\n"

    ":"  shift, and go to state 61


State 55

   37 integer: "integer value" .

    $default  reduce using rule 37 (integer)


State 56

   11 declaration: "int" ":" uinteger ":" integer . ":" integer ":" integer ":" "identifier" "\n"

    ":"  shift, and go to state 62


State 57

   12 declaration: "location" ":" "identifier" ":" "identifier" . attr_list "\n"

    "{"  shift, and go to state 63

    $default  reduce using rule 18 (attr_list)

    attr_list  go to state 64


State 58

   32 sync_constraint: "identifier" "@" "identifier" . sync_strength

    "?"  shift, and go to state 65

    $default  reduce using rule 34 (sync_strength)

    sync_strength  go to state 66


State 59

   31 sync_constraint_list: sync_constraint_list ":" sync_constraint .

    $default  reduce using rule 31 (sync_constraint_list)


State 60

    8 declaration: "clock" ":" uinteger ":" "identifier" "\n" .

    $default  reduce using rule 8 (declaration)


State 61

    9 declaration: "edge" ":" "identifier" ":" "identifier" ":" . "identifier" ":" "identifier" attr_list sop "\n"

    "identifier"  shift, and go to state 67


State 62

   11 declaration: "int" ":" uinteger ":" integer ":" . integer ":" integer ":" "identifier" "\n"

    "integer value"  shift, and go to state 55

    integer  go to state 68


State 63

   16 attr_list: "{" . non_empty_attr_list "}"
   17          | "{" . "}"

    "}"           shift, and go to state 69
    "identifier"  shift, and go to state 70

    non_empty_attr_list  go to state 71
    attr                 go to state 72


State 64

   12 declaration: "location" ":" "identifier" ":" "identifier" attr_list . "\n"

    "\n"  shift, and go to state 73


State 65

   33 sync_strength: "?" .

    $default  reduce using rule 33 (sync_strength)


State 66

   32 sync_constraint: "identifier" "@" "identifier" sync_strength .

    $default  reduce using rule 32 (sync_constraint)


State 67

    9 declaration: "edge" ":" "identifier" ":" "identifier" ":" "identifier" . ":" "identifier" attr_list sop "\n"

    ":"  shift, and go to state 74


State 68

   11 declaration: "int" ":" uinteger ":" integer ":" integer . ":" integer ":" "identifier" "\n"

    ":"  shift, and go to state 75


State 69

   17 attr_list: "{" "}" .

    $default  reduce using rule 17 (attr_list)


State 70

   27 attr: "identifier" . ":" text_or_empty

    ":"  shift, and go to state 76


State 71

   16 attr_list: "{" non_empty_attr_list . "}"
   20 non_empty_attr_list: non_empty_attr_list . ":" attr

    ":"  shift, and go to state 77
    "}"  shift, and go to state 78


State 72

   19 non_empty_attr_list: attr .

    $default  reduce using rule 19 (non_empty_attr_list)


State 73

   12 declaration: "location" ":" "identifier" ":" "identifier" attr_list "\n" .

    $default  reduce using rule 12 (declaration)


State 74

    9 declaration: "edge" ":" "identifier" ":" "identifier" ":" "identifier" ":" . "identifier" attr_list sop "\n"

    "identifier"  shift, and go to state 79


State 75

   11 declaration: "int" ":" uinteger ":" integer ":" integer ":" . integer ":" "identifier" "\n"

    "integer value"  shift, and go to state 55

    integer  go to state 80


State 76

   27 attr: "identifier" ":" . text_or_empty

    "text value"  shift, and go to state 81

    $default  reduce using rule 29 (text_or_empty)

    text_or_empty  go to state 82


State 77

   20 non_empty_attr_list: non_empty_attr_list ":" . attr

    "identifier"  shift, and go to state 70

    attr  go to state 83


State 78

   16 attr_list: "{" non_empty_attr_list "}" .

    $default  reduce using rule 16 (attr_list)


State 79

    9 declaration: "edge" ":" "identifier" ":" "identifier" ":" "identifier" ":" "identifier" . attr_list sop "\n"

    "{"  shift, and go to state 63

    $default  reduce using rule 18 (attr_list)

    attr_list  go to state 84


State 80

   11 declaration: "int" ":" uinteger ":" integer ":" integer ":" integer . ":" "identifier" "\n"

    ":"  shift, and go to state 85


State 81

   28 text_or_empty: "text value" .

    $default  reduce using rule 28 (text_or_empty)


State 82

   27 attr: "identifier" ":" text_or_empty .

    $default  reduce using rule 27 (attr)


State 83

   20 non_empty_attr_list: non_empty_attr_list ":" attr .

    $default  reduce using rule 20 (non_empty_attr_list)


State 84

    9 declaration: "edge" ":" "identifier" ":" "identifier" ":" "identifier" ":" "identifier" attr_list . sop "\n"

    "["  shift, and go to state 86

    sop  go to state 87


State 85

   11 declaration: "int" ":" uinteger ":" integer ":" integer ":" integer ":" . "identifier" "\n"

    "identifier"  shift, and go to state 88


State 86

   21 sop: "[" . "push" ":" "identifier" "]"
   22    | "[" . "pop" ":" "identifier" "<=" "integer value" "]"
   23    | "[" . "pop" ":" "identifier" ">=" "integer value" "]"
   24    | "[" . "pop" ":" "identifier" "<" "integer value" "]"
   25    | "[" . "pop" ":" "identifier" ">" "integer value" "]"
   26    | "[" . "]"

    "]"     shift, and go to state 89
    "push"  shift, and go to state 90
    "pop"   shift, and go to state 91


State 87

    9 declaration: "edge" ":" "identifier" ":" "identifier" ":" "identifier" ":" "identifier" attr_list sop . "\n"

    "\n"  shift, and go to state 92


State 88

   11 declaration: "int" ":" uinteger ":" integer ":" integer ":" integer ":" "identifier" . "\n"

    "\n"  shift, and go to state 93


State 89

   26 sop: "[" "]" .

    $default  reduce using rule 26 (sop)


State 90

   21 sop: "[" "push" . ":" "identifier" "]"

    ":"  shift, and go to state 94


State 91

   22 sop: "[" "pop" . ":" "identifier" "<=" "integer value" "]"
   23    | "[" "pop" . ":" "identifier" ">=" "integer value" "]"
   24    | "[" "pop" . ":" "identifier" "<" "integer value" "]"
   25    | "[" "pop" . ":" "identifier" ">" "integer value" "]"

    ":"  shift, and go to state 95


State 92

    9 declaration: "edge" ":" "identifier" ":" "identifier" ":" "identifier" ":" "identifier" attr_list sop "\n" .

    $default  reduce using rule 9 (declaration)


State 93

   11 declaration: "int" ":" uinteger ":" integer ":" integer ":" integer ":" "identifier" "\n" .

    $default  reduce using rule 11 (declaration)


State 94

   21 sop: "[" "push" ":" . "identifier" "]"

    "identifier"  shift, and go to state 96


State 95

   22 sop: "[" "pop" ":" . "identifier" "<=" "integer value" "]"
   23    | "[" "pop" ":" . "identifier" ">=" "integer value" "]"
   24    | "[" "pop" ":" . "identifier" "<" "integer value" "]"
   25    | "[" "pop" ":" . "identifier" ">" "integer value" "]"

    "identifier"  shift, and go to state 97


State 96

   21 sop: "[" "push" ":" "identifier" . "]"

    "]"  shift, and go to state 98


State 97

   22 sop: "[" "pop" ":" "identifier" . "<=" "integer value" "]"
   23    | "[" "pop" ":" "identifier" . ">=" "integer value" "]"
   24    | "[" "pop" ":" "identifier" . "<" "integer value" "]"
   25    | "[" "pop" ":" "identifier" . ">" "integer value" "]"

    "<"   shift, and go to state 99
    ">"   shift, and go to state 100
    "<="  shift, and go to state 101
    ">="  shift, and go to state 102


State 98

   21 sop: "[" "push" ":" "identifier" "]" .

    $default  reduce using rule 21 (sop)


State 99

   24 sop: "[" "pop" ":" "identifier" "<" . "integer value" "]"

    "integer value"  shift, and go to state 103


State 100

   25 sop: "[" "pop" ":" "identifier" ">" . "integer value" "]"

    "integer value"  shift, and go to state 104


State 101

   22 sop: "[" "pop" ":" "identifier" "<=" . "integer value" "]"

    "integer value"  shift, and go to state 105


State 102

   23 sop: "[" "pop" ":" "identifier" ">=" . "integer value" "]"

    "integer value"  shift, and go to state 106


State 103
